============================
django-dynamic-choices changelog
============================

Version 0.1.4
--------------------------------

* make sure admin select widgets trigger 'change' events when a new option is added to them
* added js field onchange bindings while making sure to avoid circular references

Version 0.1.3, 18 February 2011:
--------------------------------

* added js api to bind FK/M2M admin widget add links to specific fields
* added support for multiple jQuery versions
* fixed an issue with admin dynamic-choices js files not considering settings.(STATIC|MEDIA)_URL. Thanks bmeyer71@github.com
* embed admin choices binder directly in the page
	(make sure to extend "admin/dynamic_choices_change_form.html" if you're overriding DynamicAdmin.change|add_form_template)

Version 0.1.2, 5 February 2011:
--------------------------------

* fixed an issue with choices callback with no lookups
* fixed an issue with user defined forms on DynamicAdmin and inlines
* handle 3+ depth descriptors (field__field__...)

Version 0.1.1, 29 December 2010:
--------------------------------

* fixed an issue with formset empty form
* added support for south
* added support for reversion

I'm planing to refactor the code for version 0.2.0 in order to add support for dynamic managers or "model instance managers".
Dynamic choices will be bound to such managers. Data provided will also be wrapped in some class and tuple choices in some kind of QuerysetCollection.
Stay tuned!

Version 0.1.0, 27 December 2010:
--------------------------------

* initial release

At the moment this project is more of a "proof of concept" or exploration in order to find a clever way of adding dynamic model field choices to django.